# floor-plan-analysis

./: .gitignore  IMPROVEMENTS.md  LICENSE  README.md  RESULTS.md  analyze_door_widths.py  analyze_floor_plan.py  analyze_raw_floor_plan.py  analyze_room_dimensions.py  debug_colors.py  debug_door_detection.py  debug_doors.py  detect_doors_v2.py  extract_scale_from_dimensions.py  measure_180.py  measure_180_precise.py  pyproject.toml  test_door_methods.py  test_precise_detection.py  validate_scale.py
experiments/: experiments.json  log.md
floor_plan_analyzer/: __init__.py  analyzer.py  area_calculation.py  dimension_extraction.py  door_detection.py  experiments.py  improved_door_detection.py  manual_calibration.py  models.py  precise_door_detection.py  preprocessing.py  scale_correction.py  scale_estimation.py  segmentation.py  wall_extraction.py
tests/: __init__.py  test_area_calculation.py  test_calibration.py  test_experiments.py  test_models.py  test_preprocessing.py  test_scale_estimation.py  test_segmentation.py
